<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.JamFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"/>

    <ScrollView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        android:padding="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:timePickerMode="spinner"
                android:background="@drawable/rounded_timepicker_bg"
                />

            <Button
                android:id="@+id/btnSetAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:text="@string/btn_set_alarm"
                />
            <Button
                android:id="@+id/btnSaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/btn_saran"
                />

            <TextView
                android:id="@+id/tv_history_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200"
                android:text="@string/history_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                />

            <Button
                android:id="@+id/btn_create_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:text="@string/btn_buatCatatan" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_note_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/empty_history_message"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
